--- a/packages/react-components/src/filter-list/base/FilterListItem.module.css
+++ b/packages/react-components/src/filter-list/base/FilterListItem.module.css
@@ -39,7 +39,8 @@
   display: flex;
   flex-direction: column;
   min-width: 0;
-  overflow: hidden;
+  overflow: clip;
+  overflow-clip-margin: 4px;
 }
 
 .dragHandle {
